setup-scripts/OLD/61-nginx/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: nginx
  labels:
    app: nginx  
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: "nginx"
        volumeMounts:
        - name: nginx-data
          mountPath: /usr/share/nginx/html
        #- name: nginx-settings
        #  mountPath: /opt/nginx-lite/settings.json
        #  subPath: settings.json
      volumes:
      - name: nginx-data
        persistentVolumeClaim:
          claimName: nginx-data-pvc
      #- name: nginx-settings
      #  configMap:
      #    name: nginx-settings-cm
