setup-scripts/OLD/61-nginx/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production  
  labels:
    app: nginx
spec:
  ingressClassName: nginx
  tls:
    - secretName: nginx-ssl
      hosts:
      - nginx.k8s.feri.ai          
  rules:
  - host: "nginx.k8s.feri.ai"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: nginx-service
              port:
                number: 80
